build: Move main to src
Moves main to src, and removes prj folder.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 project(hello_opengl)
-add_executable(hello_opengl WIN32 prjs/hello_opengl/src/main.cpp)
+add_executable(hello_opengl WIN32 src/main.cpp)
 
 # Add GLFW to build
 set(GLFW_BUILD_DOCS OFF CACHE BOOL  "GLFW lib only")
