--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,10 @@ list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/ext/spdlog/build")
 find_package(spdlog REQUIRED)
 target_link_libraries(hello_opengl spdlog::spdlog)
 
+list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/ext/glm/cmake")
+find_package(glm REQUIRED)
+target_link_libraries(hello_opengl glm::glm)
+
 target_sources(hello_opengl PRIVATE
                lib/framework/windowHandler.cpp
                lib/framework/gameShader.cpp
