lib: Refactor object render workflow

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,7 @@ target_sources(hello_opengl PRIVATE
                lib/framework/graphicsProgram.cpp
                lib/framework/graphicsFramework.cpp
                lib/framework/graphicsScreen.cpp
-               lib/gameTriangle.cpp
-               lib/train/rectangle.cpp
+               lib/game/rectangleObject.cpp
                lib/game/camera.cpp)
 include_directories(hello_opengl include)
 
