lib: Introduce World class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,8 @@ target_sources(ferd PRIVATE
                lib/game/train.cpp
                lib/game/trainNavigator.cpp
                lib/game/trainPhysics.cpp
-               lib/game/line.cpp)
+               lib/game/line.cpp
+               lib/game/world.cpp)
 include_directories(ferd include ext)
 
 # Add GLFW to build
