framework: Add lines to rendering framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ target_sources(ferd PRIVATE
                lib/framework/graphicsProgram.cpp
                lib/framework/graphicsFramework.cpp
                lib/framework/geometry/rectangleObject.cpp
+               lib/framework/geometry/lineObject.cpp
                lib/game/camera.cpp
                lib/game/train.cpp
                lib/game/trainNavigator.cpp
